# SE-Review-Material

./: README.md
ARM处理器/: 复习（2025年）.ppt
ARM处理器/ARM作业/: 2022130102013-成棋伟-第一章作业.doc  2022130102013-成棋伟-第三章作业.docx  2022130102013-成棋伟-第二章作业.doc  2022130102013-成棋伟-第五章作业.doc  2022130102013-成棋伟-第四章作业.doc
ARM处理器/PPT/: 第1章  嵌入式系统基础.ppt  第3章--ARM指令集.ppt  第4章  伪指令.ppt  第5章  ARM编程基础.ppt
操作系统/: 复习参考文档.md
操作系统/实验/: 2022130102013-成棋伟-操作系统实验一.docx  2022130102013-成棋伟-操作系统实验二 -.docx
数据库/数据库作业/: 2_2022130102013_成棋伟_作业三.doc  2_2022130102013_成棋伟_作业四.doc  2_作业1_2022130102013_成棋伟.doc  2_作业2_2022130102013_成棋伟.doc  第一次《数据库原理及应用》 课程大作业.doc  第二次《数据库原理及应用》 课程大作业.doc  第二次《数据库原理及应用》 课程大作业.doc  第四次《数据库原理及应用》 课程大作业.doc
数据库/数据库复习/: 1_2022-2023-2学期《数据库原理及应用》-课程教学大纲修订说明.doc  2.3 数据库关系运算.ppt
离散数学/: 离散——名词解释.md
离散数学/ppt/: CH3 谓词逻辑2024.pptx  CH4 二元关系.pptx  CH6-图.pptx  离散数学复习（2024）v2.pptx
编译原理/: 2024复习重点_周尔强.md  基础算法习题.txt
编译原理/ppt_周尔强/: 03第03章 词法分析.ppt  04第04章01 文法语法.ppt  06第06章 优化与中间代码生成.pptx  06第06章 寄存器分配及SSA.pptx  07第07章 运行时存储空间的组织.ppt  LR1.pptx
编译原理/复习汇总/: 编译原理算法复习.md  速成.md
编译原理/编译实验/课件/lab2/vscode/: CMakeLists.txt  build.sh
计算机组成原理/ppt/: 03-第三章 模型机的组合逻辑控制器（四）.pptx  11.11ch4存储器设计作业答案.pptx  5IO系统-1接口.ppt  5IO系统-2总线.ppt  5IO系统-3中断.pptx  5IO系统-4DMA.ppt  5IO系统补充课件 输入输出系统.pptx  ch1-0-吴晓华老师.pptx  ch1-2  逻辑代数基础.pptx  ch1-3 组合逻辑电路.pptx  ch2-1机器码基础&加减法.ppt  ch2-5机器码除法转换为加法原理.ppt  ch2-6运算部件.ppt  ch3-1CPU子系统概述部分.ppt  ch3-4CPU子系统-组合逻辑控制方式.ppt  ch3-4控制器原理-吴晓华老师.ppt  ch3-6CPU子系统-设计.ppt  ch3-8子系统-微程序控制方式.ppt  ch4-1 存储器概述及半导体芯片.ppt  ch4-2存储器设计1-2024.pptx  《计算机系统结构》重点知识总结.docx  (+1 more)
计算机网络/实验/: 新.txt  (+4 more)
(+126 files in other folders)
